--- a/.gitignore
+++ b/.gitignore
@@ -336,3 +336,4 @@ files/Switzerland-Frozen&foods.csv
 files/Switzerland-Sauces.csv
 files/Switzerland-Snacks.csv
 files/Switzerland-Spreads.csv
+README.html
