--- a/.gitignore
+++ b/.gitignore
@@ -336,4 +336,4 @@ files/Switzerland-Frozen&foods.csv
 files/Switzerland-Sauces.csv
 files/Switzerland-Snacks.csv
 files/Switzerland-Spreads.csv
-
+.write-test-b9abfcac-6226-4782-b4b2-af3478c9a55a
