--- a/.gitignore
+++ b/.gitignore
@@ -337,3 +337,45 @@ files/Switzerland-Sauces.csv
 files/Switzerland-Snacks.csv
 files/Switzerland-Spreads.csv
 .write-test-b9abfcac-6226-4782-b4b2-af3478c9a55a
+files/Australia-Canned&foods.csv
+files/Australia-Cocoa&and&its&products.csv
+files/Australia-Frozen&foods.csv
+files/Austria-Canned&foods.csv
+files/Austria-Cocoa&and&its&products.csv
+files/Austria-Frozen&foods.csv
+files/Belgium-Canned&foods.csv
+files/Belgium-Cocoa&and&its&products.csv
+files/Belgium-Frozen&foods.csv
+files/Czechia-Canned&foods.csv
+files/Czechia-Cocoa&and&its&products.csv
+files/Czechia-Frozen&foods.csv
+files/Denmark-Canned&foods.csv
+files/Denmark-Cocoa&and&its&products.csv
+files/Denmark-Frozen&foods.csv
+files/Germany-Canned&foods.csv
+files/Germany-Cocoa&and&its&products.csv
+files/Germany-Frozen&foods.csv
+files/Greece-Canned&foods.csv
+files/Greece-Cocoa&and&its&products.csv
+files/Greece-Frozen&foods.csv
+files/Italy-Canned&foods.csv
+files/Italy-Cocoa&and&its&products.csv
+files/Italy-Frozen&foods.csv
+files/Netherlands-Canned&foods.csv
+files/Netherlands-Cocoa&and&its&products.csv
+files/Netherlands-Frozen&foods.csv
+files/Norway-Canned&foods.csv
+files/Norway-Cocoa&and&its&products.csv
+files/Norway-Frozen&foods.csv
+files/Slovakia-Canned&foods.csv
+files/Slovakia-Cocoa&and&its&products.csv
+files/Slovakia-Frozen&foods.csv
+files/Spain-Canned&foods.csv
+files/Spain-Cocoa&and&its&products.csv
+files/Spain-Frozen&foods.csv
+files/Sweden-Canned&foods.csv
+files/Sweden-Cocoa&and&its&products.csv
+files/Sweden-Frozen&foods.csv
+files/Switzerland-Canned&foods.csv
+files/Switzerland-Cocoa&and&its&products.csv
+files/Switzerland-Frozen&foods.csv
